Freeing jrgb buffer if they are no longer used. ArrayList used for framehistory in videostate instead of linkedlist. better memory performance